# python-tooling

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  Taskfile.yml
ec2/: Taskfile.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py
ec2/marleu_ec2/: __init__.py  ec2.py
emr/: README.md  Taskfile.yml  pyproject.toml  requirements.txt  setup.py
emr/marleu_emr/: __init__.py  emr.py
marleu-pytest/: Taskfile.yml  pyproject.toml
marleu-pytest/src/: entrypoint_without_installing_absolute_paths.py
marleu-pytest/src/marleu_pytest/: entrypoint.py
marleu-pytest/tests/: test_marleu_pytest.py
marleu-pytest/tests/greetings/: test_marleu_pytest.py
pyspark/: Taskfile.yml
