[tool.poetry]
name = "marleu_ec2"
version = "0.1.0"
description = "Deployment tool for EC2"
license = "MIT"
authors = ["Martin Leuthold"]
repository = "https://github.com/mleuthold/python-tooling"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.17.60"
urllib3 = "^1.26.5"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
boto3-stubs = "^1.17.60"
black = "^21.4b2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
marleu-ec2 = 'marleu_ec2.ec2:main'