[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.poetry]
name = "marleu_emr"
version = "0.1.3"
description = "Deployment tool for EMR"
license = "MIT"
authors = ["Martin Leuthold"]
readme = "README.md"
repository = "https://github.com/mleuthold/python-tooling"

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"
paramiko = "*"
credstash = "*"
cryptography = "*"
urllib3 = "^1.26.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
marleu-emr = 'marleu_emr.emr:main'
